--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6348,3 +6348,66 @@ img.img-fluid2 {
   width: 40px;
   height: 40px;
 }
+.newDelarSlid {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+h3.sliderTile {
+  font-size: 110px;
+  line-height: 84px;
+}
+.newDelarSlid .carousel-caption p {
+  font-size: 25px;
+}
+.newDelarSlid .carousel-inner{
+  background: rgb(2,0,36);
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);}
+
+  /* .newDelarSlid .carousel-inner:after {
+  content: '';
+  background-color: #00000082;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 1;
+} */
+.newDelarSlid .carousel-caption {
+  position: absolute;
+  background: #00000045;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  padding-top: 16%;
+}
+.newDelarSlid span.visually-hidden {
+  display: none;
+}
+.newDelarSlid.carousel {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  align-items: center;
+  display: flex;
+  overflow: hidden;
+}
+.newDelarSlid .carousel-indicators button.active {
+  border: 1px solid white;
+  width: 15px;
+  height: 14px;
+  background: #f7931a;
+  margin: 3px;
+  border-radius: 100px;
+}
+.newDelarSlid .carousel-indicators button {
+  border: 1px solid white;
+  width: 15px;
+  height: 14px;
+  background: #fff;
+  margin: 3px;
+  border-radius: 100px;
+}
+.newDelarSlid .carousel-indicators {bottom: 30px;}
