--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5693,7 +5693,7 @@ btn1 {
 
 span.color_orange.couNt {
   background: #000;
-  padding: 2px 6px;
+  padding: 2px 9px;
   border-radius: 100%;
   font-size: 12px;
   position: relative;
@@ -5724,7 +5724,7 @@ span.color_orange.couNt {
 
 span.numBr {
   background: #000;
-  padding: 5px;
+  padding: 0px 8px;
   border-radius: 100%;
   margin-left: 5px;
 }
@@ -5861,7 +5861,7 @@ ul.listFund li {
 
 .sellerBox a img {
   background: #f7811c;
-  padding: 5px;
+  padding: 3px 5px;
   border-radius: 100%;
 }
 
@@ -6361,9 +6361,9 @@ h3.sliderTile {
 .newDelarSlid .carousel-caption p {
   font-size: 25px;
 }
-.newDelarSlid .carousel-inner{
+/* .newDelarSlid .carousel-inner{
   background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);}
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);} */
 
   /* .newDelarSlid .carousel-inner:after {
   content: '';
@@ -6381,8 +6381,9 @@ h3.sliderTile {
   width: 100%;
   height: 100%;
   left: 0;
-  padding-top: 16%;
+  padding-top: 30%;
 }
+.light .newDelarSlid .carousel-caption h3,.light .newDelarSlid .carousel-caption p {color: #fff;}
 .newDelarSlid span.visually-hidden {
   display: none;
 }
@@ -6411,3 +6412,82 @@ h3.sliderTile {
   border-radius: 100px;
 }
 .newDelarSlid .carousel-indicators {bottom: 30px;}
+.newDelarSlid .carousel img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.light .commentFooter a {
+  color: #000;
+}
+.carousel img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+.newDelarSlid .carousel-inner{
+  height: 450px;
+  display: flex;
+  align-items: center;
+}
+
+.bgOrange {
+  background: #f7931a;
+  padding: 40px;
+}
+.bgOrange button.btn {
+  background: aliceblue;
+  color: #000;
+  font-weight: 200;
+  font-size: 15px;
+  padding: 10px 20px;
+}
+.contactD {
+ min-height: 450px;
+  background-image: url(../images/contactBg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+}
+.contactD h5 {
+  font-size: 18px;
+  line-height: 24px;
+}
+.contactD h5 span {
+  display: block;
+  padding-left: 20px;
+}
+.contactD h5 svg {
+  font-size: 25px;
+  padding: 0px 10px;
+  width: 16px;
+}
+.contactInfo {
+  background: #f7931a;
+  width: 70%;
+  padding: 30px;
+  display: flow-root;
+}
+.contactInfo ul li {
+  width: 50%;
+  float: left;
+}
+.contactInfo ul li:first-child {
+  width: 30%;
+}
+.contactInfo ul li:last-child {
+  width: 70%;
+}
+.contactInfo ul li {
+  padding-bottom: 15px;
+}
+.contactInfo h2 {
+  padding-bottom: 8px;
+  border-bottom: 1px solid;
+  margin-bottom: 24px;
+}
