--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -687,12 +687,20 @@
 }
 
 @media (max-width: 768px) {
+	.contactInfo {
+		background: #f7931a;
+		width: 100%;
+		padding: 30px;
+		display: flow-root;
+	}
 	.ar {
 		flex-direction: column;
 	}
 }
 
 @media (min-width: 768px) {
+
+	
 
 
 	.mobileOnly {
@@ -710,120 +718,34 @@
 }
 
 @media (max-width: 767px) {
-	.tabPlan button {
-		width: 31.33%;
-		margin: 1px;
-	}
-
-	.text_title {
-		margin: 15px 0;
-	}
-
-	.plan_card .plan_cardHead {
-		min-height: unset;
-	}
-
-	button.btn.bidnW {
-		padding: 0;
-	}
-
-	.addSection .inner-slider .card_post {
-		display: block;
-	}
-
-	.auctionBid {
-		padding: 0;
-	}
-
-	/* .addSection .inner-slider small {
-		position: absolute;
-		right: 24px;
-		bottom: 166px;
-		background: black;
-		padding: 5px 15px;
-	} */
-
-	.addSection .inner-slider .card_postImg.dlr {
-		padding-right: 0;
-	}
-
-	.modal-dialog {
-		width: auto;
-	}
-
-	.modal-header .close {
-		top: -18px;
-		left: -1%;
-	}
-
-	.fp {
-		display: block;
-	}
-
-	.modal-body,
-	.modal-header {
-		padding: 0rem;
-	}
-
-	.modal-body label {
-		font-size: 13px;
-	}
-
-	.infoCar {
-		width: 100%;
-	}
-
-	.featuredAuctions_Slide.delair .slick-list {
-		text-align: center;
-	}
-
-	.featuredAuctions_Slide.delair .card_postImg.dlr {
-		margin: 0 auto;
-	}
-
-	.modal-title {
-		font-size: 18px;
-	}
-
-	.processPy h2 {
-		font-size: 15px;
-	}
-
-	.processPy .price__ {
-		font-size: 14px;
-	}
-
-	.mobileOnly form.searchForm {
-		width: 100%;
-	}
-
-	.navbar-expand-md .navbar-toggler {
-		display: block;
-		position: relative;
-
-		top: 8px;
-	}
-
-	.plan_cardBody {
-		min-height: auto;
-	}
-
-	span.plan_Time small {
-		right: 20px;
-	}
-
-	.cartImgSect img {
-		width: 36%;
-		padding-right: 10px;
-	}
-
-	h1 {
-		font-size: 30px;
-	}
-
-	h2 {
-		font-size: 25px;
-	}
+	.newDelarSlid.carousel {height: 210px;}
+	.newDelarSlid .carousel-caption p {font-size: 10px;}
+	h3.sliderTile {	font-size: 30px;line-height: 24px;}
+	.tabPlan button {width: 31.33%;margin: 1px;}
+	.text_title {margin: 15px 0;}
+	.plan_card .plan_cardHead {	min-height: unset;}
+	button.btn.bidnW {padding: 0;	}
+	.addSection .inner-slider .card_post {display: block;}
+	.auctionBid {padding: 0;}
+	.addSection .inner-slider .card_postImg.dlr {padding-right: 0;}
+	.modal-dialog {	width: auto;}
+	.modal-header .close {	top: -18px;	left: -1%;}
+	.fp {display: block;	}
+	.modal-body,.modal-header {	padding: 0rem;}
+	.modal-body label {	font-size: 13px;}
+	.infoCar {	width: 100%;}
+	.featuredAuctions_Slide.delair .slick-list {text-align: center;	}
+	.featuredAuctions_Slide.delair .card_postImg.dlr {margin: 0 auto;	}
+	.modal-title {	font-size: 18px;}
+	.processPy h2 {	font-size: 15px;}
+	.processPy .price__ {font-size: 14px;}
+	.mobileOnly form.searchForm {width: 100%;}
+	.navbar-expand-md .navbar-toggler {	display: block;	position: relative;	top: 8px;}
+	.plan_cardBody {min-height: auto;}
+	span.plan_Time small {right: 20px;}
+	.cartImgSect img {width: 36%;	padding-right: 10px;}
+	h1 {font-size: 30px;}
+	h2 {font-size: 25px;}
 
 	.scrollDownIc img {
 		width: 22px;
