--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5738,7 +5738,7 @@ span.numBr {
 }
 
 .postHero.detail {
-  height: 50vh;
+  height: 60vh;
 }
 
 .Dfrt {
@@ -6429,7 +6429,7 @@ h3.sliderTile {
   overflow: hidden;
 }
 .newDelarSlid .carousel-inner{
-  height: 450px;
+  height: 510px;
   display: flex;
   align-items: center;
 }
@@ -6490,4 +6490,32 @@ h3.sliderTile {
   padding-bottom: 8px;
   border-bottom: 1px solid;
   margin-bottom: 24px;
+}
+
+.videoWidth {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.videoColl .col-lg-6 {
+  height: 216px;
+  margin: 0px;
+  padding: 0;
+  width: 40%;
+  border: 3px solid transparent;
+}
+.ant-image .ant-image-mask {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background: rgb(255 165 0 / 32%);
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s;
+  left: 5px;
+  width: 100%;
+  height: 100%;
 }
