--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6390,7 +6390,7 @@ h3.sliderTile {
 .newDelarSlid.carousel {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 100%;
   align-items: center;
   display: flex;
   overflow: hidden;
@@ -6429,7 +6429,7 @@ h3.sliderTile {
   overflow: hidden;
 }
 .newDelarSlid .carousel-inner{
-  height: 510px;
+  height: 100%;
   display: flex;
   align-items: center;
 }
