--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -128,7 +128,7 @@
 }
 
 @media (max-width: 1440px) {
-
+	
 	.modal-title {
 		font-size: 28px;
 	}
@@ -181,7 +181,9 @@
 	.secondNavbar .navbar-nav .nav-link {
 		font-size: 12px;
 	}
-
+	.secondNavbar {
+		top: -23px;
+	}
 
 }
 
