--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6520,4 +6520,18 @@ h3.sliderTile {
   height: 100%;
 }
 
-.modal-dialog-centered{    min-height: calc(100% - -1.5rem);}
+.modal-dialog-centered {
+  min-height: calc(100% - -3.5rem);
+}
+
+.rbc-event, .rbc-day-slot .rbc-background-event {
+  background-color: #f7931a !important;
+}
+
+ul.bidOnThis li p{
+  width: 50%;
+  float: left;
+}
+ul.bidOnThis li p:first-child {
+  width: 26%;
+}
