--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6535,3 +6535,13 @@ ul.bidOnThis li p{
 ul.bidOnThis li p:first-child {
   width: 26%;
 }
+.gry_btn:hover, .gry_btn.active {
+  border-color: transparent;
+}
+
+.galleryPh .ant-image .ant-image-img {
+  width: 188px;
+  height: 124px;
+  vertical-align: middle;
+  object-fit: cover;
+}
