--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6377,7 +6377,7 @@ h3.sliderTile {
 } */
 .newDelarSlid .carousel-caption {
   position: absolute;
-  background: #00000045;
+  /* background: #00000045; */
   width: 100%;
   height: 100%;
   left: 0;
