--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6399,16 +6399,16 @@ h3.sliderTile {
 }
 .newDelarSlid .carousel-indicators button.active {
   border: 1px solid white;
-  width: 15px;
-  height: 14px;
+  width: 35px;
+    height: 4px;
   background: #f7931a;
   margin: 3px;
   border-radius: 100px;
 }
 .newDelarSlid .carousel-indicators button {
   border: 1px solid white;
-  width: 15px;
-  height: 14px;
+  width: 35px;
+    height: 4px;
   background: #fff;
   margin: 3px;
   border-radius: 100px;
@@ -6636,4 +6636,26 @@ ul.bidOnThis li p:first-child { width: 26%;}
 }
 .showGallery .col-lg-5 {
   height: 720px;
+}
+
+.col-12 .galleryImgSect.gg{
+  width: 100%;
+  height: 120px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+.logoImg img.slidImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.logoImg {
+  padding: 0;
+  height: 290px
+}
+
+
+.light .inner-slider.drl .card_post{
+  background: #f7f7f7;
 }
