--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6659,3 +6659,7 @@ ul.bidOnThis li p:first-child { width: 26%;}
 .light .inner-slider.drl .card_post{
   background: #f7f7f7;
 }
+
+.ant-image-preview-operations {  top: 14%;}
+
+#sticky { top: 105px !important;}
