--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6637,6 +6637,7 @@ ul.bidOnThis li p:first-child { width: 26%;}
 }
 .showGallery .col-lg-5 .ant-image.css-dev-only-do-not-override-1hyej8k {
   height: 815px;
+  width: 100%;
 }
 
 .col-12 .galleryImgSect.gg{
