--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6666,7 +6666,7 @@ ul.bidOnThis li p:first-child { width: 26%;}
 
 #sticky { top: 105px !important;}
 
-.showGallery .col-lg-6 .ant-image.css-dev-only-do-not-override-1hyej8k {
+.showGallery .col-lg-6 .ant-image {
   height: 353px;
   width: 100%;
 }
