--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -2394,6 +2394,12 @@ form .gry_btn {
   text-transform: uppercase;
 }
 
+.latestBlogCard {
+  background-color: #fbfbfb;
+  border-radius: 16px;
+  padding: 20px;
+}
+
 .orangeCard {
   background-color: #f7931a;
   border-radius: 16px;
@@ -6564,6 +6570,16 @@ ul.bidOnThis li p:first-child { width: 26%;}
   100% {
     transform: translateX(calc(-250px * 9));
   }
+}
+
+.latestBlogSlide {
+  height: 255px;
+  width: 100% !important;
+  display: flex !important;
+  align-items: center;
+  margin: 0 0x;
+  border-radius: 12.9515px;
+  perspective: 100px;
 }
 
 .slide {
