--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -713,7 +713,6 @@
 
 	
 
-
 	.mobileOnly {
 		display: block;
 	}
@@ -1171,6 +1170,30 @@
 	}
 
 	.card_.Dfrt .dropdown {
+		width: 100%;
+	}
+	.col-xs-7 {
+		flex: 0 0 61.666667%;
+		max-width: 51.666667%;
+	}
+	.col-xs-5 {
+		flex: 0 0 47.666667%;
+		max-width: 62.666667%;
+	}
+	.col-xs-6 {
+		flex: 0 0 49.666667%;
+		max-width: 49.666667%;
+	}
+	.showGallery .col-lg-6 .ant-image {
+		height: 132px;
+		width: 100%;
+	}
+	.showGallery .col-lg-6 .ant-image, .showGallery .col-lg-12 .ant-image {
+		height: 150px;
+		width: 100%;
+	}
+	.showGallery .col-lg-5 .ant-image {
+		height: 314px;
 		width: 100%;
 	}
 }
