--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -1240,6 +1240,11 @@
 		flex-direction: row-reverse;
 		flex-direction: column-reverse;
 	}
+	
+	.downloadZip {
+		padding: 15px 0px;
+		text-align: center;
+	}
 }
 
 @media (max-width: 575px) {
