--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -424,7 +424,7 @@ img.addBanner {
 }
 
 .activeListView .card_postInfo p {
-  display: none;
+  /* display: none; */
 }
 
 .activeListView .labelList {
