--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -1547,7 +1547,7 @@ select.field option {
 }
 
 .plan_cardBody {
-  padding: 25px 0px 15px;
+  padding: 0px 0px 8px;
   border-top: 1px rgba(255, 255, 255, 0.1) solid;
 }
 
@@ -6796,6 +6796,8 @@ p.dicount span {
   z-index: 9999999999;
 }
 
+
+
 .light .post-share .post-share-link svg {
   color: #000;
 }
@@ -6808,4 +6810,11 @@ p.dicount span {
 }
 .ant-select-dropdown-placement-bottomLeft {
   z-index: 9999999999999;
+}
+
+.ant-select-dropdown-placement-bottomLeft {
+  position: fixed;
+}
+footer {
+  margin-top: 60px;
 }
