--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6821,3 +6821,10 @@ footer {
   margin-top: 60px;
 }
 .anty-select-dropdown-placement-bottomLeft{ z-index: 99999999999oo99}
+
+
+
+.light .gry_btn.active {
+  background: #000;
+  border: 1px solid #000;
+}
