--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -1260,6 +1260,9 @@
 	.bHide button {
 		display: none;
 	  }
+	  .detailPostOption .labelList li:nth-child(2) {
+		border-right: 0;
+	}
 }
 
 @media (max-width: 575px) {
