--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3935,7 +3935,7 @@ td.actionBtn {
 
 td.actionBtn {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   padding: 1rem !important;
 }
 
@@ -3995,7 +3995,7 @@ td.actionBtn.vs .btn {
   font-weight: 100;
   border-radius: 5px;
   text-transform: unset;
-  height: 30px;
+  height: auto;
   margin-top: 2px;
 }
 
@@ -6268,7 +6268,7 @@ a.dfr {
 
 .neWm button.dropdown-toggle.btn.btn-success {
   background: transparent;
-  padding: 10px;
+  padding: 0px;
   border: 0px !important;
 }
 
