--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3969,9 +3969,9 @@ li.nav-item.AddtCrt span.count {
   font-size: 13px;
 }
 
-.dropdown-content {
+/* .dropdown-content {
   right: -70px;
-}
+} */
 
 ul.navbar-nav {
   /* padding-right: 50px; */
@@ -6677,7 +6677,7 @@ footer { margin-top: 60px;}
 .auctionLive .card_post{  background: #f0f0f0;}
 .desCrtpion {  min-height: 30vh;  border: 1px solid #333333;  padding: 10px;  border-radius: 5px;}
 .dropzone {  border: 2px dashed rgb(51 51 51);}
-.desCrtpion .rdw-editor-toolbar { background: #ffffff00; border: navajowhite;}
+.desCrtpion .wrapperClassName.rdw-editor-wrapper { background: #ffffff00; border: navajowhite;}
 .mtb-3{ margin: 15px 0px;}
 .DraftEditor-editorContainer span{  color: #fff;}
 .light .DraftEditor-editorContainer span{ color: #000;}
@@ -6694,3 +6694,17 @@ footer { margin-top: 60px;}
   filter: initial;
 }
 .modal { top: 70px;}
+
+.auctionLive .card_postImg img{height: 195px;}
+
+.detailPostOption .labelList.ddertg li label {
+  font-size: 12px;}
+
+ .mobileOnlyV {
+    display: none;
+}
+
+h3.cardTitle.riTArrow {
+  display: flex;
+  justify-content: space-between;
+}
